# mozconfigwrapper

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  mozconfig.py  mozconfigwrapper.sh  pyproject.toml  setup.py  template
.github/workflows/: ci.yml  pypi-publish.yml
mozconfigwrapper/: __init__.py  mozconfig.py
src/mozconfigwrapper/: __init__.py  mozconfig.py
src/scripts/: mozconfigwrapper.sh
tests/: conftest.py  setup  teardown  test_mozconfigwrapper.py  test_mozconfigwrapper.t  test_shell.py
